<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/et_tech_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_full_name"
        android:padding="12dp"
        android:textColor="@color/text_main"
        android:textColorHint="@color/text_grey" />

    <EditText
        android:id="@+id/et_tech_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/text_main"
        android:textColorHint="@color/text_grey" />

    <EditText
        android:id="@+id/et_tech_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="@color/text_main"
        android:textColorHint="@color/text_grey" />

    <EditText
        android:id="@+id/et_tech_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_temporary_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_main"
        android:textColorHint="@color/text_grey" />

</LinearLayout>
